in the middle of x-editable implementation, about to move data setup

--- a/public/view/index.html
+++ b/public/view/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="/public/vendors/materialize.min.css">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="/public/vendors/angular-keypad.min.css">
+  <link rel="stylesheet" href="/public/vendors/xeditable.min.css">
   <link rel="stylesheet" href="/public/styles/main.min.css">
 
   <!-- Vendors -->
@@ -17,7 +18,7 @@
   <script src="/public/vendors/materialize.min.js" charset="utf-8"></script>
   <script src="/public/vendors/angular-materialize.min.js" charset="utf-8"></script>
   <script src="/public/vendors/angular-keypad.min.js"></script>
-
+  <script src="/public/vendors/xeditable.min.js"></script>
 
   <!-- Ng-App -->
   <script src="/public/scripts/app.js" charset="utf-8"></script>
