touched up modals and added instructors input

--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -1,10 +1,15 @@
 /*Variable styles*/
-$buttonColor: #2196f3;
 $navColor: #4fc3f7;
 $sideNavColor: #4fc3f7;
 $navCollapse: #2196f3;
+$inputColor:  #2196f3;
+$buttonColor: #2196f3;
+$monthPickerTop: #2196f3;
+$pickerBody: #03A9F4;
+$pickerText: #B3E5FC;
 
 /*Import styles*/
 @import 'navigation';
 @import 'login';
 @import 'generalStyles';
+@import 'inputs'
