--- a/public/view/partials/classesDashboard.html
+++ b/public/view/partials/classesDashboard.html
@@ -6,8 +6,8 @@
 <div class="row">
   <div class="center-align">
     <div ng-if='cc.admin' class="input-field col s6 offset-s1">
-      <input  ng-model=cc.email type="text" name="" value="">
-      <label for="">Instrucotrs email</label>
+      <input  ng-model=cc.email type="text" id="instructorEmail" value="">
+      <label for="instructorEmail">Instrucotrs email</label>
     </div>
     <button ng-if='cc.admin' ng-click="cc.addUser()" class='btn center-align' type="button" name="button">add admin</button>
     <button class="btn" onclick="document.getElementById('addClass').style.display = 'block'">Add Class</button>
@@ -58,44 +58,56 @@
 <div id="addClass" class="modal">
   <span class="close animate" onclick="document.getElementById('addClass').style.display = 'none'">&times;</span>
   <div class="modal-content animate">
-    <form ng-submit='cc.addClass()' class="" action="index.html" method="post">
-      <div class="input-field">
+    <form class="row">
+      <div class="input-field col l6 s12">
         <i class="material-icons prefix">grade</i>
-        <input ng-model='cc.grades' type="text" name="" value="">
-        <label for="">Grades</label>
+        <input ng-model='cc.grades' type="text" id="grade" value="">
+        <label for="grade">Grades</label>
       </div>
-      <div class="input-field">
-        <i class="material-icons prefix">location_on</i>
-        <input ng-model='cc.location' type="text" name="" value="">
-        <label for="">Location</label>
-      </div>
-      <div class="input-field">
+      <div class="input-field col l6 s12">
         <i class="material-icons prefix">subject</i>
-        <input ng-model='cc.subject' type="text" name="" value="">
-        <label for="">Subject</label>
+        <input ng-model='cc.subject' type="text" id="subject" value="">
+        <label for="subject">Subject</label>
       </div>
-      <div class="input-field">
+      <div class="input-field col l6 s12">
         <i class="material-icons prefix">date_range</i>
-        <input input-date type="text" name="start" format="mm/dd/yyyy" ng-model='cc.startDate'>
+        <input input-date type="text" id="start" format="mm/dd/yyyy" ng-model='cc.startDate'>
         <label for="start">Start Date</label>
       </div>
-      <div class="input-field">
+      <div class="input-field col l6 s12">
         <i class="material-icons prefix">date_range</i>
-        <input input-date type="text" name="end" format="mm/dd/yyyy" ng-model='cc.endDate'>
+        <input input-date type="text" id="end" format="mm/dd/yyyy" ng-model='cc.endDate'>
         <label for="end">End Date</label>
       </div>
-      <div class="input-field">
+      <div class="input-field col l6 s12">
         <i class="material-icons prefix">timelapse</i>
         <label class="" for="startTime">Start Time</label>
         <input id="startTime" class="timepicker" ng-model="cc.startTime" input-clock data-twelvehour="false" type="text" />
       </div>
-      <div class="input-field">
+      <div class="input-field col l6 s12">
         <i class="material-icons prefix">timelapse</i>
         <label class="placeInLabel" for="endTime">End Time</label>
         <input id="endTime" class="timepicker placeInput" ng-model="cc.endTime" input-clock data-twelvehour="false" type="text" />
       </div>
+      <div class="input-field col l8 offset-l2 s12">
+        <i class="material-icons prefix">location_on</i>
+        <input ng-model='cc.location' type="text" id="location" value="">
+        <label for="location">Location</label>
+      </div>
+      <div class="input-field col l8 offset-l2 s12" ng-repeat="number in cc.inputNumber">
+        <i class="material-icons prefix">person</i>
+        <input ng-model='cc.instructors' type="text" id="instructors" value="">
+        <label for="instructors">instructors</label>
+      </div>
+      <button class="btn" name="button" ng-click="cc.addInput()">
+        <i class="material-icons prefix">add</i>
+      </button>
     </form>
-    <button class='btn' ng-click='cc.addClass()' type="button" name="button">Save Class</button>
+    <div class="row">
+      <div class="col s12 center-align">
+        <button class='btn' ng-click='cc.addClass()' type="button" name="button">Save Class</button>
+      </div>
+    </div>
   </div>
 </div>
 
@@ -105,42 +117,42 @@
       <form ng-submit='' class="" action="index.html" method="post">
         <div class="input-field">
           <i class="material-icons prefix">grade</i>
-          <input ng-model='cc.grades' type="text" name="" value="">
-          <label for="">Grades</label>
+          <input ng-model='cc.gradesUP' type="text" id="gradeUP" value="">
+          <label for="gradeUP">Grades</label>
         </div>
         <div class="input-field">
           <i class="material-icons prefix">location_on</i>
-          <input ng-model='cc.location' type="text" name="" value="">
-          <label for="">Location</label>
+          <input ng-model='cc.locationUP' type="text" id="locationUP" value="">
+          <label for="locationUP">Location</label>
         </div>
         <div class="input-field">
           <i class="material-icons prefix">subject</i>
-          <input ng-model='cc.subject' type="text" name="" value="">
-          <label for="">Subject</label>
+          <input ng-model='cc.subjectUP' type="text" id="subjectUP" value="">
+          <label for="subjectUP">Subject</label>
         </div>
         <div class="input-field">
           <i class="material-icons prefix">date_range</i>
-          <input input-date type="text" name="start" format="mm/dd/yyyy" ng-model='cc.startDate'>
-          <label for="start">Start Date</label>
+          <input input-date type="text" id="startUP" format="mm/dd/yyyy" ng-model='cc.startDateUP'>
+          <label for="startUP">Start Date</label>
         </div>
         <div class="input-field">
           <i class="material-icons prefix">date_range</i>
-          <input input-date type="text" name="end" format="mm/dd/yyyy" ng-model='cc.endDate'>
-          <label for="end">End Date</label>
+          <input input-date type="text" id="endUP" format="mm/dd/yyyy" ng-model='cc.endDateUP'>
+          <label for="endUP">End Date</label>
         </div>
         <div class="input-field">
           <i class="material-icons prefix">timelapse</i>
-          <label class="" for="startTime">Start Time</label>
-          <input id="startTime" class="timepicker" ng-model="cc.startTime" input-clock data-twelvehour="false" type="text" />
+          <label class="" for="startTimeUP">Start Time</label>
+          <input id="startTimeUP" class="timepicker" ng-model="cc.startTimeUP" input-clock data-twelvehour="false" type="text" />
         </div>
         <div class="input-field">
           <i class="material-icons prefix">timelapse</i>
-          <label class="placeInLabel" for="endTime">End Time</label>
-          <input id="endTime" class="timepicker placeInput" ng-model="cc.endTime" input-clock data-twelvehour="false" type="text" />
+          <label class="placeInLabel" for="endTimeUP">End Time</label>
+          <input id="endTimeUP" class="timepicker placeInput" ng-model="cc.endTimeUP" input-clock data-twelvehour="false" type="text" />
         </div>
       </form>
       <button class='btn' ng-click='' type="button" name="button">Save Class</button>
-
+      </div>
   </div>
 </div>
 
