--- a/public/view/parent.html
+++ b/public/view/parent.html
@@ -1,4 +1,4 @@
-<div class="">
+<div class="" ng-init="pc.loadClassInfo()">
   <h1>Parent View</h1>
   <ul>
     <li ng-repeat='student in pc.studentArray' ng-click='pc.checkInStudent($index)'>
