--- a/public/styles/_navigation.scss
+++ b/public/styles/_navigation.scss
@@ -42,3 +42,13 @@ nav {
 .title {
   display: inline-block;
 }
+
+.disabled {
+  color: rgba(0,0,0,0.4);
+  display: block;
+  font-size: 14px;
+  font-weight: 500;
+  height: 48px;
+  line-height: 48px;
+  padding: 0 32px;
+}
