--- a/public/view/index.html
+++ b/public/view/index.html
@@ -62,7 +62,11 @@
       <ul id="nav" class="side-nav">
         <li class="bold"><a href="#!classes" class="waves-effect waves"><span class="menuItem">Classes Dashboard</span></a></li>
 
-        <li class="">
+        <li tooltipped ng-show="ic.classSub" class="disabled" data-position="right" data-delay="100" data-tooltip="Please select class from dashboard to view this dropdown">
+          <span>Class options</span>
+        </li>
+
+        <li ng-show="ic.classMenu" class="">
           <ul class="collapsible collapsible-accordion">
             <li class="bold"><a class="padding collapsible-header waves-effect waves active"><span class="menuItem">Class Options</span></a>
               <div class="collapsible-body">
