--- a/public/view/parentQuestions/4a-pinSystem.html
+++ b/public/view/parentQuestions/4a-pinSystem.html
@@ -1,5 +1,8 @@
-<div class="">
-  <h3>Yo I heard you like pins</h3>
+<div class="" ng-init="pc.loadPinInfo">
+  <div ng-if="pc.currentStudent.usePin">
+    WE GOT A PIN ALREADY
+  </div>
+  <h3>Would you like to use a PIN to check out the student?</h3>
   <button class="btn" ng-click='pc.usePin(true)' type="button" name="button">yoooooo</button>
   <button class="btn" ng-click='pc.usePin(false)' type="button" name="button">noooooo</button>
 
