--- a/public/view/partials/studentDashboard.html
+++ b/public/view/partials/studentDashboard.html
@@ -8,6 +8,7 @@
         <input ng-model='sc.grade' type="text" name="" value="">
         <button ng-click='sc.populateStudents()' type="button" name="button"></button>
       </form> -->
+      <button class="btn"ng-click="sc.goToParent()">Check-in View</button>
       <button class="btn" onclick="document.getElementById('addStudent').style.display = 'block'">Add Student</button>
     </div>
   </div>
