--- a/public/view/parentQuestions/3-receiveTexts.html
+++ b/public/view/parentQuestions/3-receiveTexts.html
@@ -1,5 +1,5 @@
 <div class="">
-  <h3>would you like to receive texts when your child has been sacrificed?</h3>
+  <h3>Would you like to receive texts when your child is checked out?</h3>
   <button class="btn" ng-click='pc.receiveTexts(true)' type="button" name="button">Yes, text</button>
   <button class="btn" ng-click='pc.receiveTexts(true)' type="button" name="button">Yes, emails</button>
   <button class="btn" ng-click='pc.receiveTexts(false)' type="button" name="button">No</button>
