--- a/public/view/parentQuestions/4a-pinSystem.html
+++ b/public/view/parentQuestions/4a-pinSystem.html
@@ -3,7 +3,7 @@
     WE GOT A PIN ALREADY
   </div>
   <h3>Would you like to use a PIN to check out the student?</h3>
-  <button class="btn" ng-click='pc.usePin(true)' type="button" name="button">yoooooo</button>
-  <button class="btn" ng-click='pc.usePin(false)' type="button" name="button">noooooo</button>
+  <button class="btn" ng-click='pc.usePin(true)' type="button" name="button">Yes</button>
+  <button class="btn" ng-click='pc.usePin(false)' type="button" name="button">No</button>
 
 </div>
