--- a/public/view/parent.html
+++ b/public/view/parent.html
@@ -1,8 +1,25 @@
-<div class="" ng-init="pc.loadClassInfo()">
-  <h1>Parent View</h1>
+<div class="row" ng-init="pc.loadClassInfo()">
+  <table class="col l6">
+    <thead>
+      <tr>
+        <th></th>
+        <th>Child name</th>
+        <th></th>
+      </tr>
+    </thead>
+
+    <tbody>
+      <tr ng-repeat='student in pc.studentArray' ng-click='pc.checkInStudent($index)'>
+        <td></td>
+        <td>{{student.firstName}} {{student.lastName}}</td>
+        <td ng-show="student.initialized" class="btn">Review Info</td>
+      </tr>
+    </tbody>
+  </table>
+  <!-- <h1>Parent View</h1>
   <ul>
     <li ng-repeat='student in pc.studentArray' ng-click='pc.checkInStudent($index)'>
       Check in:  {{student.firstName}} {{student.lastName}}
     </li>
-  </ul>
+  </ul> -->
 </div>
