added the update class view

--- a/public/view/partials/classesDashboard.html
+++ b/public/view/partials/classesDashboard.html
@@ -171,7 +171,7 @@
     </form>
     <div class="row">
       <div class="col s12 center-align">
-        <button class='btn' ng-click='' type="button" name="button">Save Class</button>
+        <button class='btn' ng-click='cc.saveEdit()' type="button" name="button">Save Class</button>
       </div>
     </div>
   </div>
