--- a/public/view/parentQuestions/5-complete.html
+++ b/public/view/parentQuestions/5-complete.html
@@ -1,4 +1,4 @@
 <div class="">
-  <h3>Great!  {{pc.studentFirstName}}**GET NAME HERE** has been checked in!</h3>
+  <h3>Great!  {{pc.currentStudent.firstName}} has been checked in!</h3>
   <button class="btn" ng-click='pc.go("/parent")' type="button" name="button">yoooooo</button>
 </div>
